--- a/footer.html
+++ b/footer.html
@@ -7,10 +7,8 @@
                 <!-- Left content here -->
             </div>
             <div class="col-md-3 text-right">
-                <a href=""><img src="./Media/BlueSky Icon.png"
+                <a href=""><img src="./Media/ArXiv Icon.png"
                         alt="Social Media Icon 1" class="img-fluid custom-icon"></a>
-                <a href=""><img src="./Media/iNaturalist Icon.png" alt="Social Media Icon 2"
-                        class="img-fluid custom-icon"></a>
                 <a href=""><img src="./Media/GoogleScholar Icon.png" alt="Social Media Icon 3"
                         class="img-fluid custom-icon"></a>
             </div>
