--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Your website content goes here -->
     <div class="background-image"
-        style="background-image: url('https://images.unsplash.com/photo-1644088379091-d574269d422f?q=80&w=3793&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');height: 70vh">
+        style="background-image: url('https://images.unsplash.com/photo-1644088379091-d574269d422f?q=80&w=3793&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')">
     </div>
     <div id="initContent"></div>
     <script>
@@ -24,44 +24,43 @@
     <!-- Custom content in this page -->
 
     <div style="padding-top: 75vh;"></div>
+    
     <section class="container mb-5 hidden content-BoxGCU">
         <div class="row align-items-center">
-            <div class="col-md-6">
-                <div class="row">
-                    <div class="person-description">
-                        <h2>Lorem, ipsum dolor.</h2>
-                        <hr>
-                        <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam quasi ab modi cum nam
-                            accusamus impedit cupiditate placeat asperiores omnis. Vero impedit cumque, delectus totam
-                            similique inventore quasi non earum repudiandae placeat, iste assumenda rem eaque eveniet
-                            beatae, ducimus qui.
-                        </p>
-                        <hr>
-                    </div>
-                </div>
-                <div class="row align-items-center mb-5">
-                    <div class="col-md-3 col-sm-6 p-5">
-                        <img src="./Media/GoogleScholar Icon.png" class="img-fluid" alt="Person Photo" style="">
-                    </div>
-                    <div class="col-md-8 col-sm-6">
-                        <div>
-                            <hr>
-                            <h1>RESEARCH</h1>
-                            <hr>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-md-6 person-description">
+                <h2>OUR MISSION</h2>
+                <hr>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam quasi ab modi cum nam
+                    accusamus impedit cupiditate placeat asperiores omnis. Vero impedit cumque, delectus totam
+                    similique inventore quasi non earum repudiandae placeat, iste assumenda rem eaque eveniet
+                    beatae, ducimus qui.
+                </p>
+                <hr>
 
             </div>
             <div class="col-md-6">
-                <div class="">
-                    <img src="./Media/profile_anim.gif" class="img-fluid person-photo" alt="Person Photo">
-                </div>
+                <img src="./Media/chemai_anim2.gif" class="img-fluid" alt="">
+
             </div>
         </div>
 
     </section>
+
+    <!-- <section class="container mb-5">
+        <div class="row align-items-center">
+            <div class="col-md-12 person-description">
+                <div class="infographic-icon"></div>
+
+            </div>
+        </div>
+
+    </section> -->
+
+    <div id="infJQ"></div>
+    <script>
+        $("#infJQ").load("Infographics_1.html");
+    </script>
 
 
 
