--- a/navbar.html
+++ b/navbar.html
@@ -1,14 +1,11 @@
-<nav class="navbar navbar-expand-lg" style="background-color: #770e9718; color: #aa8aef;">
+<nav class="navbar navbar-expand-lg" style="background-color: #0516322f; color: #aa8aef;">
     <div class="container-fluid">
-        <div class="container">
-            <a class="navbar-brand titleText" style="font-size: 3em; font-weight: 800; color: #c765e5;"
-                href="./index.html">
-                <img src="./Media/entanglement.png" class="img-fluid" style="width: 20%;" alt=""> 
-                <br>
-                Quantum Chemistry Lab
-            </a>
-            <h4 class="titleText">Chemistry & Chemical Biology</h4>
-        </div>
+        <a class="navbar-brand" href="./index.html">
+            <img src="./Media/logo.png" class="img-fluid" style="width: 25%;" alt="">
+            <h3 style="font-weight: 800; color: #6699cc;">Chemistry & Chemical Biology</h3>
+
+
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -17,7 +14,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link titleText" href="Contact.html">People</a>
+                    <a class="nav-link titleText" href="People.html">People</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link titleText" href="Research.html">Research</a>
@@ -26,7 +23,7 @@
                     <a class="nav-link titleText" href="Publications.html">Publications</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link titleText" href="Contact.html">Contact</a>
+                    <a class="nav-link titleText" href="External.html">External Links</a>
                 </li>
 
             </ul>
