--- a/People.html
+++ b/People.html
@@ -92,6 +92,9 @@
             <div class="col-md-8 person-description">
                 <h2>Dr. Rodrigo A. Vargaz-Hernández (BRAZIL)</h2>
                 <hr>
+                <p>
+                    lorem*20
+                </p>
                 
             </div>
             <div class="col-md-4">
