--- a/Publications.html
+++ b/Publications.html
@@ -7,32 +7,120 @@
 </head>
 
 <body>
-    <!-- Your website content goes here -->
-    <div class="background-image"
-        style="background-image: url('https://images.unsplash.com/photo-1644088379091-d574269d422f?q=80&w=3793&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')">
-    </div>
-    <div id="initContent"></div>
-    <script>
-        $(function () {
-            // Load the template.html file
-            $('#initContent').load('template.html');
-        });
+    <!-- ############### Insert NAVBAR with jQuery ############## -->
+    <div id="navbarJQ"></div>
+    <!-- ############### PUBLICATIONS Section ############## -->
+    <!-- MAIN SECTION: UNDERGRAD STUDENTS -->
+    <section class="container m-5 pt-3 pb-3 content-BoxGCU" style="background: #3b494f;">
+        <!-- PAPER 1 -->
+        <div class="row align-items-center mb-5 content-BoxGCU undergradStyle hidden">
+            <div class="col-md-7">
+                <div class="row">
+                    <h3 class="customh1">PennyLane: Automatic differentiation of hybrid quantumclassical computations
+                    </h3>
+                    <div class="col d-flex justify-content-end">
+                        <h4>Berglhom et. al (2022)</h4>
+                    </div>
+                    <hr>
+                </div>
+                <div class="row">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error culpa modi hic nihil accusamus?
+                    Accusantium dolore dignissimos dolorum ratione nihil deserunt unde maxime nisi eos, veniam vel,
+                    molestiae cum accusamus?
+                    Ducimus quibusdam repellendus ea reiciendis assumenda pariatur dolores sit voluptatum quasi. Unde
+                    facilis excepturi, voluptatem hic iste optio eius est fugit accusamus ratione nihil fugiat, tempora
+                    architecto, soluta magnam laborum.
+                </div>
+                <div class="row">
+                    <div class="col-6"></div>
+                    <div class="col-3 content-BoxGCU d-flex justify-content-center">
+                        <a href="https://arxiv.org/pdf/1811.04968" class="customlink">Ref1</a>
+                    </div>
+                    <div class="col-3 content-BoxGCU d-flex justify-content-center">
+                        <a href="#" class="customlink">Ref2</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5">
+                <img src="./Media/Papers_Thumbnails/AutDiffQua.png" class="img-fluid" alt="">
+            </div>
+        </div>
+        <!-- PAPER 2 -->
+        <div class="row align-items-center mb-5 content-BoxGCU undergradStyle hidden">
+            <div class="col-md-7">
+                <div class="row">
+                    <h3 class="customh1">PennyLane: Automatic differentiation of hybrid quantumclassical computations
+                    </h3>
+                    <div class="col d-flex justify-content-end">
+                        <h4>Berglhom et. al (2022)</h4>
+                    </div>
+                    <hr>
+                </div>
+                <div class="row">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error culpa modi hic nihil accusamus?
+                    Accusantium dolore dignissimos dolorum ratione nihil deserunt unde maxime nisi eos, veniam vel,
+                    molestiae cum accusamus?
+                    Ducimus quibusdam repellendus ea reiciendis assumenda pariatur dolores sit voluptatum quasi. Unde
+                    facilis excepturi, voluptatem hic iste optio eius est fugit accusamus ratione nihil fugiat, tempora
+                    architecto, soluta magnam laborum.
+                </div>
+                <div class="row">
+                    <div class="col-6"></div>
+                    <div class="col-3 content-BoxGCU d-flex justify-content-center">
+                        <a href="https://arxiv.org/pdf/1811.04968" class="customlink">Ref1</a>
+                    </div>
+                    <div class="col-3 content-BoxGCU d-flex justify-content-center">
+                        <a href="#" class="customlink">Ref2</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5">
+                <img src="./Media/Papers_Thumbnails/AutDiffQua.png" class="img-fluid" alt="">
+            </div>
+        </div>
+        <!-- PAPER 3 -->
+        <div class="row align-items-center mb-5 content-BoxGCU undergradStyle hidden">
+            <div class="col-md-7">
+                <div class="row">
+                    <h3 class="customh1">PennyLane: Automatic differentiation of hybrid quantumclassical computations
+                    </h3>
+                    <div class="col d-flex justify-content-end">
+                        <h4>Berglhom et. al (2022)</h4>
+                    </div>
+                    <hr>
+                </div>
+                <div class="row">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error culpa modi hic nihil accusamus?
+                    Accusantium dolore dignissimos dolorum ratione nihil deserunt unde maxime nisi eos, veniam vel,
+                    molestiae cum accusamus?
+                    Ducimus quibusdam repellendus ea reiciendis assumenda pariatur dolores sit voluptatum quasi. Unde
+                    facilis excepturi, voluptatem hic iste optio eius est fugit accusamus ratione nihil fugiat, tempora
+                    architecto, soluta magnam laborum.
+                </div>
+                <div class="row">
+                    <div class="col-6"></div>
+                    <div class="col-3 content-BoxGCU d-flex justify-content-center">
+                        <a href="https://arxiv.org/pdf/1811.04968" class="customlink">Ref1</a>
+                    </div>
+                    <div class="col-3 content-BoxGCU d-flex justify-content-center">
+                        <a href="#" class="customlink">Ref2</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5">
+                <img src="./Media/Papers_Thumbnails/AutDiffQua.png" class="img-fluid" alt="">
+            </div>
+        </div>
 
-
-    </script>
-
-    <!-- Custom content in this page -->
-
-    <div style="padding-top: 75vh;"></div>
-    
-    <section class="container mb-5 hidden content-BoxGCU">
     </section>
 
-
-
-    <!-- FOOTER -->
+    <!-- ############### FOOTER ############## -->
     <div id="footerJQ"></div>
+
+    <!-- ################ SCRIPTS ################################### -->
+
     <script>
+        $("#navbarJQ").load("navbar.html");
         $("#footerJQ").load("footer.html");
     </script>
 
@@ -50,7 +138,6 @@
 
 
 
-    <script defer src="app.js"></script>
 </body>
 
 </html>
