--- a/footer.html
+++ b/footer.html
@@ -2,14 +2,12 @@
 <footer class="bg-dark text-light text-center py-3">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-9">
-                <!-- Left half of the footer (placeholder text) -->
-                <!-- Left content here -->
-            </div>
-            <div class="col-md-3 text-right">
-                <a href=""><img src="./Media/ArXiv Icon.png"
-                        alt="Social Media Icon 1" class="img-fluid custom-icon"></a>
+            <div class="col text-center">
+                <a href=""><img src="./Media/ArXiv Icon.png" alt="Social Media Icon 1"
+                        class="img-fluid custom-icon"></a>
                 <a href=""><img src="./Media/GoogleScholar Icon.png" alt="Social Media Icon 3"
+                        class="img-fluid custom-icon"></a>
+                <a href=""><img src="./Media/Github Icon.png" alt="Social Media Icon 3"
                         class="img-fluid custom-icon"></a>
             </div>
         </div>
