--- a/index.html
+++ b/index.html
@@ -7,23 +7,10 @@
 </head>
 
 <body>
-    <!-- Your website content goes here -->
-    <div class="background-image"
-        style="background-image: url('https://images.unsplash.com/photo-1644088379091-d574269d422f?q=80&w=3793&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')">
-    </div>
-
-    <div id="initContent"></div>
-    <script>
-        $(function () {
-            // Load the template.html file
-            $('#initContent').load('template.html');
-        });
-    </script>
-
-    <!-- Custom content in this page -->
-
+    <!-- ############### Insert NAVBAR with jQuery ############## -->
+    <div id="navbarJQ"></div>
+    <!-- ############### Edit text elements in this page ############## -->
     <div style="padding-top: 15vh;"></div>
-    
     <section class="container mb-5 hidden content-BoxGCU">
         <div class="row align-items-center">
             <div class="col-md-6 person-description">
@@ -39,51 +26,25 @@
 
             </div>
             <div class="col-md-6">
-                <img src="./Media/chemai_anim2.gif" class="img-fluid" alt="">
+                <img src="./Media/chemai_anim.gif" class="img-fluid" alt="">
 
             </div>
         </div>
 
     </section>
-
-    <!-- <section class="container mb-5">
-        <div class="row align-items-center">
-            <div class="col-md-12 person-description">
-                <div class="infographic-icon"></div>
-
-            </div>
-        </div>
-
-    </section> -->
-
+    <!-- ############### Bubble Infographics ############## -->
     <div id="infJQ"></div>
-    <script>
-        $("#infJQ").load("Infographics_1.html");
-    </script>
-
-
-
-    <!-- FOOTER -->
+    <!-- ############### Reading FOOTER with jQuery ############## -->
     <div id="footerJQ"></div>
+
+
+    <!-- ################ SCRIPTS ################################### -->
     <script>
+        $("#navbarJQ").load("navbar.html");
+        $("#infJQ").load("Infographics_1.html");
         $("#footerJQ").load("footer.html");
     </script>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script defer src="app.js"></script>
 </body>
 
 </html>
