--- a/People.html
+++ b/People.html
@@ -108,7 +108,7 @@
     <section class="container mb-5 content-BoxGCU" style="background: #485155;">
         <div class="row align-items-center">
             <div class="col p-4" style="text-align: center;">
-                <h1 class="customh1 content-BoxGCU">Undergraduate Students</h1>
+                <h1 class="customh1 content-BoxGCU">Undergraduate Students - Alumni</h1>
             </div>
         </div>
         <!-- STUDENT 1 -->
