softmax test pub

--- a/Publications.html
+++ b/Publications.html
@@ -49,33 +49,31 @@
         <div class="row align-items-center mb-5 content-BoxGCU undergradStyle hidden">
             <div class="col-md-7">
                 <div class="row">
-                    <h3 class="customh1">PennyLane: Automatic differentiation of hybrid quantumclassical computations
+                    <h3 class="customh1"> Softmax parameterization of the occupation numbers for natural orbital functionals
                     </h3>
                     <div class="col d-flex justify-content-end">
-                        <h4>Berglhom et. al (2022)</h4>
+                        <h4>L. Franco et. al (2024)</h4>
                     </div>
                     <hr>
                 </div>
                 <div class="row">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error culpa modi hic nihil accusamus?
-                    Accusantium dolore dignissimos dolorum ratione nihil deserunt unde maxime nisi eos, veniam vel,
-                    molestiae cum accusamus?
-                    Ducimus quibusdam repellendus ea reiciendis assumenda pariatur dolores sit voluptatum quasi. Unde
-                    facilis excepturi, voluptatem hic iste optio eius est fugit accusamus ratione nihil fugiat, tempora
-                    architecto, soluta magnam laborum.
+                    Within the framework of natural orbital functional theory, having a convenient representation of the optimization function becomes critical for the computational performance of the calculation. 
+                    Recognizing this, we propose an innovative parametrization of the occupation numbers that takes advantage of the electron-pairing approach used in Piris natural orbital functionals, through the adoption of the softmax function, a pivotal component in modern deep-learning models. 
+                    Our approach not only ensures adherence to the N-representability of the first-order reduced density matrix (1RDM) but also significantly enhances the computational efficiency of 1RDM functional theory calculations. 
+                    The effectiveness of this alternative parameterization approach was assessed using the W4-17-MR molecular set, which demonstrated faster and robust convergence compared to previous implementations. 
                 </div>
                 <div class="row">
                     <div class="col-6"></div>
                     <div class="col-3 content-BoxGCU d-flex justify-content-center">
-                        <a href="https://arxiv.org/pdf/1811.04968" class="customlink">Ref1</a>
+                        <a href="https://arxiv.org/abs/2403.09463" class="customlink">arxiv</a>
                     </div>
-                    <div class="col-3 content-BoxGCU d-flex justify-content-center">
+                    <!-- <div class="col-3 content-BoxGCU d-flex justify-content-center">
                         <a href="#" class="customlink">Ref2</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="col-md-5">
-                <img src="./Media/Papers_Thumbnails/AutDiffQua.png" class="img-fluid" alt="">
+                <img src="./Media/Papers_Thumbnails/softmax_RDM.png" class="img-fluid" alt="">
             </div>
         </div>
         <!-- PAPER 3 -->
