of dft norm flow

--- a/Publications.html
+++ b/Publications.html
@@ -12,39 +12,6 @@
     <!-- ############### PUBLICATIONS Section ############## -->
     <!-- MAIN SECTION: UNDERGRAD STUDENTS -->
     <section class="container m-5 pt-3 pb-3 content-BoxGCU" style="background: #3b494f;">
-        <!-- PAPER 1 -->
-        <div class="row align-items-center mb-5 content-BoxGCU undergradStyle hidden">
-            <div class="col-md-7">
-                <div class="row">
-                    <h3 class="customh1">PennyLane: Automatic differentiation of hybrid quantumclassical computations
-                    </h3>
-                    <div class="col d-flex justify-content-end">
-                        <h4>Berglhom et. al (2022)</h4>
-                    </div>
-                    <hr>
-                </div>
-                <div class="row">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error culpa modi hic nihil accusamus?
-                    Accusantium dolore dignissimos dolorum ratione nihil deserunt unde maxime nisi eos, veniam vel,
-                    molestiae cum accusamus?
-                    Ducimus quibusdam repellendus ea reiciendis assumenda pariatur dolores sit voluptatum quasi. Unde
-                    facilis excepturi, voluptatem hic iste optio eius est fugit accusamus ratione nihil fugiat, tempora
-                    architecto, soluta magnam laborum.
-                </div>
-                <div class="row">
-                    <div class="col-6"></div>
-                    <div class="col-3 content-BoxGCU d-flex justify-content-center">
-                        <a href="https://arxiv.org/pdf/1811.04968" class="customlink">Ref1</a>
-                    </div>
-                    <div class="col-3 content-BoxGCU d-flex justify-content-center">
-                        <a href="#" class="customlink">Ref2</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-5">
-                <img src="./Media/Papers_Thumbnails/AutDiffQua.png" class="img-fluid" alt="">
-            </div>
-        </div>
         <!-- PAPER 2 -->
         <div class="row align-items-center mb-5 content-BoxGCU undergradStyle hidden">
             <div class="col-md-7">
@@ -80,6 +47,37 @@
         <div class="row align-items-center mb-5 content-BoxGCU undergradStyle hidden">
             <div class="col-md-7">
                 <div class="row">
+                    <h3 class="customh1">Normalizing flows and orbital-free DFT
+                    </h3>
+                    <div class="col d-flex justify-content-end">
+                        <h4>A. de Camargo et. al (2024)</h4>
+                    </div>
+                    <hr>
+                </div>
+                <div class="row">
+                    Orbital-free density functional theory (OF-DFT) for real-space systems has historically depended on Lagrange optimization techniques, primarily due to the inability of previously proposed electron density ansatze to ensure the normalization constraint. 
+                    This study illustrates how leveraging contemporary generative models, notably normalizing flows (NFs), can surmount this challenge. We pioneer a Lagrangian-free optimization framework by employing these machine learning models as ansatze for the electron density. 
+                    This novel approach also integrates cutting-edge variational inference techniques and equivariant deep learning models, offering an innovative alternative to the OF-DFT problem. 
+                </div>
+                <div class="row">
+                    <div class="col-6"></div>
+                    <div class="col-3 content-BoxGCU d-flex justify-content-center">
+                        <a href="https://arxiv.org/abs/2404.08764" class="customlink">arxiv</a>
+                    </div>
+                    <div class="col-3 content-BoxGCU d-flex justify-content-center">
+                        <a href="https://github.com/RodrigoAVargasHdz/ofdft_normalizing-flows" class="customlink">GitHub</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5">
+                <img src="./Media/Papers_Thumbnails/nflow_water.gif" class="img-fluid" alt="">
+            </div>
+        </div>
+
+                <!-- PAPER 1 -->
+        <div class="row align-items-center mb-5 content-BoxGCU undergradStyle hidden">
+            <div class="col-md-7">
+                <div class="row">
                     <h3 class="customh1">PennyLane: Automatic differentiation of hybrid quantumclassical computations
                     </h3>
                     <div class="col d-flex justify-content-end">
@@ -109,7 +107,6 @@
                 <img src="./Media/Papers_Thumbnails/AutDiffQua.png" class="img-fluid" alt="">
             </div>
         </div>
-
     </section>
 
     <!-- ############### FOOTER ############## -->
