--- a/Infographics_1.html
+++ b/Infographics_1.html
@@ -15,7 +15,7 @@
 </style>
 
 
-<div class="container-fluid content-BoxGCU p-5">
+<div class="container-fluid p-5">
     <div class="row">
         <div class="col-4"></div>
         <div class="col-6">
