--- a/People.html
+++ b/People.html
@@ -54,7 +54,7 @@
 
     <!-- ############### Detailed People text sections ############## -->
     <!-- MAIN SECTION: LAB PROFFESSOR AND STAFF -->
-    <section class="container mb-5 content-BoxGCU" style="background: #303639;">
+    <section class="container mb-3 content-BoxGCU" style="background: #303639;">
         <div class="row align-items-center">
             <div class="col p-4" style="text-align: center;">
                 <h1 class="customh1 content-BoxGCU">Staff</h1>
@@ -75,7 +75,7 @@
     </section>
 
     <!-- MAIN SECTION: GRAD STUDENTS -->
-    <section class="container mb-5 content-BoxGCU" style="background: #485155;">
+    <section class="container mb-3 content-BoxGCU" style="background: #485155;">
         <div class="row align-items-center">
             <div class="col p-4" style="text-align: center;">
                 <h1 class="customh1 content-BoxGCU">Graduate Students</h1>
@@ -105,10 +105,10 @@
     </section>
 
     <!-- MAIN SECTION: UNDERGRAD STUDENTS -->
-    <section class="container mb-5 content-BoxGCU" style="background: #485155;">
+    <section class="container mb-3 content-BoxGCU" style="background: #485155;">
         <div class="row align-items-center">
             <div class="col p-4" style="text-align: center;">
-                <h1 class="customh1 content-BoxGCU">Undergraduate Students - Alumni</h1>
+                <h1 class="customh1 content-BoxGCU">Undergraduate Students</h1>
             </div>
         </div>
         <!-- STUDENT 1 -->
@@ -134,6 +134,35 @@
 
     </section>
 
+     <!-- MAIN SECTION: ALUMNI  -->
+     <section class="container mb-3 content-BoxGCU" style="background: rgb(67, 81, 86);">
+        <div class="row align-items-center">
+            <div class="col p-4" style="text-align: center;">
+                <h1 class="customh1 content-BoxGCU">Alumni</h1>
+            </div>
+        </div>
+        <!-- STUDENT 1 -->
+        <div class="row align-items-center mb-5 content-BoxGCU undergradStyle ">
+            <div class="col-md-8 person-description">
+                <h2>Dr. Rodrigo A. Vargaz-Hernández (MEXICO)</h2>
+                <hr>
+            </div>
+            <div class="col-md-4">
+                <img src="./Media/profile_anim.gif" class="img-fluid" alt="">
+            </div>
+        </div>
+        <!-- STUDENT 2 -->
+        <div class="row align-items-center mb-5 content-BoxGCU undergradStyle">
+            <div class="col-md-8 person-description">
+                <h2>Dr. Rodrigo A. Vargaz-Hernández (MEXICO)</h2>
+                <hr>
+            </div>
+            <div class="col-md-4">
+                <img src="./Media/profile_anim.gif" class="img-fluid" alt="">
+            </div>
+        </div>
+
+    </section>
 
     <!-- ############### FOOTER ############## -->
     <div id="footerJQ"></div>
