--- a/navbar.html
+++ b/navbar.html
@@ -22,8 +22,7 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #05163213; color: #aa8aef;">
     <div class="container-fluid">
         <a class="navbar-brand" href="./index.html">
-            <img src="./Media/logo.png" class="img-fluid" style="width: 25%;" alt="">
-            <h3 style="font-weight: 800; color: #6699cc;">Chemistry & Chemical Biology</h3>
+            <img src="./Media/logoV2_large.png" class="img-fluid" style="width: 50%;" alt="">
 
 
         </a>
