--- a/Publications.html
+++ b/Publications.html
@@ -39,7 +39,7 @@
                     </div> -->
                 </div>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 text-end">
                 <img src="./Media/Papers_Thumbnails/softmax_RDM.png" class="img-fluid" alt="">
             </div>
         </div>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5  text-end">
                 <img src="./Media/Papers_Thumbnails/nflow_water.gif" class="img-fluid" alt="">
             </div>
         </div>
@@ -103,7 +103,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5  text-end">
                 <img src="./Media/Papers_Thumbnails/AutDiffQua.png" class="img-fluid" alt="">
             </div>
         </div>
