--- a/People.html
+++ b/People.html
@@ -36,7 +36,7 @@
     <div id="navbarJQ"></div>
 
     <!-- ############### Map section ############## -->
-    <section class="container-fluid mb-5 hidden content-BoxGCU">
+    <section class="container-fluid mb-5 content-BoxGCU">
         <div class="row align-items-center p-3">
             <div class="col-md-8 p-2"
                 style="height: 65vh; background-image: url('./Media/bg_map.png'); background-size: cover; background-position: center;">
@@ -45,7 +45,7 @@
 
             <div class="col-md-3 content-BoxGCU">
                 <div class="p-3 rounded shadow" style="background: #5b6871;">
-                    <h2>OUR STUDENTS AND COLLABORATORS</h2>
+                    <h2>OUR RESEARCH TEAM </h2>
                     <hr>
                 </div>
             </div>
@@ -81,10 +81,39 @@
                 <h1 class="customh1 content-BoxGCU">Graduate Students</h1>
             </div>
         </div>
+
+                <!-- PAPER 3 -->
+        <div class="row align-items-center mb-5 content-BoxGCU undergradStyle">
+            <div class="col-md-7">
+                <div class="row">
+                    <h3 class="customh1"> Nombre del Alumno
+                    </h3>
+                    <hr>
+                </div>
+                <div class="row">
+                    Info del alumno
+                </div>
+                <div class="row">
+                    <div class="col-6"></div>
+                    <div class="col-3 content-BoxGCU d-flex justify-content-center">
+                        <a href="https://arxiv.org/abs/2404.08764" class="customlink">arxiv</a>
+                    </div>
+                    <div class="col-3 content-BoxGCU d-flex justify-content-center">
+                        <a href="https://github.com/RodrigoAVargasHdz/ofdft_normalizing-flows" class="customlink">GitHub</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5  text-end">
+                <img src="./Media/Papers_Thumbnails/nflow_water.gif" class="img-fluid" alt="">
+            </div>
+        </div>
+
+
         <!-- GRAD STUDENT 1 -->
         <div class="row align-items-center mb-5 content-BoxGCU gradStudentStyle">
             <div class="col-md-8 person-description">
-                <h2>Dr. Rodrigo A. Vargaz-Hernández (MEXICO)</h2>
+                <h2 class="customh1">Dr. Rodrigo A. Vargaz-Hernández (MEXICO)</h2>
+                Info del alumno
                 <hr>
             </div>
             <div class="col-md-4">
@@ -114,15 +143,13 @@
         <!-- STUDENT 1 -->
         <div class="row align-items-center mb-5 content-BoxGCU undergradStyle ">
             <div class="col-md-8 person-description">
-                <h2>Dr. Rodrigo A. Vargaz-Hernández (MEXICO)</h2>
+                <!-- <h2>Dr. Rodrigo A. Vargaz-Hernández (MEXICO)</h2> -->
+                (2024) Rudra Sondhi <br>
                 <hr>
-            </div>
-            <div class="col-md-4">
-                <img src="./Media/profile_anim.gif" class="img-fluid" alt="">
             </div>
         </div>
         <!-- STUDENT 2 -->
-        <div class="row align-items-center mb-5 content-BoxGCU undergradStyle">
+        <!-- <div class="row align-items-center mb-5 content-BoxGCU undergradStyle">
             <div class="col-md-8 person-description">
                 <h2>Dr. Rodrigo A. Vargaz-Hernández (MEXICO)</h2>
                 <hr>
@@ -130,7 +157,7 @@
             <div class="col-md-4">
                 <img src="./Media/profile_anim.gif" class="img-fluid" alt="">
             </div>
-        </div>
+        </div> -->
 
     </section>
 
@@ -144,15 +171,17 @@
         <!-- STUDENT 1 -->
         <div class="row align-items-center mb-5 content-BoxGCU undergradStyle ">
             <div class="col-md-8 person-description">
-                <h2>Dr. Rodrigo A. Vargaz-Hernández (MEXICO)</h2>
+                (2023) Simon Paiva, Visiting M.Sc Student <br>
+                (2023) Manuel Drewhal, Visiting Student <br>
+                (2024) Michael Tran, Undergraduate Thesis  <br>
                 <hr>
             </div>
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                 <img src="./Media/profile_anim.gif" class="img-fluid" alt="">
-            </div>
+            </div> -->
         </div>
         <!-- STUDENT 2 -->
-        <div class="row align-items-center mb-5 content-BoxGCU undergradStyle">
+        <!-- <div class="row align-items-center mb-5 content-BoxGCU undergradStyle">
             <div class="col-md-8 person-description">
                 <h2>Dr. Rodrigo A. Vargaz-Hernández (MEXICO)</h2>
                 <hr>
@@ -160,7 +189,7 @@
             <div class="col-md-4">
                 <img src="./Media/profile_anim.gif" class="img-fluid" alt="">
             </div>
-        </div>
+        </div> -->
 
     </section>
 
