--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
     <section class="container mb-5 hidden content-BoxGCU">
         <div class="row align-items-center">
             <div class="col-md-6 person-description">
-                <h2>OUR MISSION</h2>
+                <h2>Welcome to our research group's webpage!</h2>
                 <hr>
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam quasi ab modi cum nam
-                    accusamus impedit cupiditate placeat asperiores omnis. Vero impedit cumque, delectus totam
-                    similique inventore quasi non earum repudiandae placeat, iste assumenda rem eaque eveniet
-                    beatae, ducimus qui.
+                    Our primary focus is on harnessing the power of machine learning to enhance and innovate computational chemistry simulations. 
+                    We leverage advanced algorithms and data-driven approaches to unravel complex chemical behaviors and predict material properties with unprecedented accuracy. 
+                    Our interdisciplinary team is dedicated to pushing the boundaries of computational science, developing tools that facilitate deeper understanding of chemical and quantum processes and material interactions at the molecular level. 
                 </p>
                 <hr>
 
