--- a/footer.html
+++ b/footer.html
@@ -3,9 +3,9 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center">
-                <a href=""><img src="./Media/GoogleScholar Icon.png" alt="Social Media Icon 3"
+                <a target="_blank" href="https://scholar.google.com/citations?view_op=list_works&hl=es&user=nX-hqX0AAAAJ"><img src="./Media/GoogleScholar Icon.png" alt="Social Media Icon 3"
                         class="img-fluid custom-icon"></a>
-                <a href=""><img src="./Media/Github Icon.png" alt="Social Media Icon 3"
+                <a target="_blank" href="https://github.com/ChemAI-Lab"><img src="./Media/Github Icon.png" alt="Social Media Icon 3"
                         class="img-fluid custom-icon"></a>
             </div>
         </div>
