--- a/People.html
+++ b/People.html
@@ -96,7 +96,7 @@
                 <div class="row">
                     <div class="col-6"></div>
                     <div class="col-3 content-BoxGCU d-flex justify-content-center">
-                        <a href="https://arxiv.org/abs/2404.08764" class="customlink">arxiv</a>
+                        <a href="https://arxiv.org/abs/2404.08764" class="customlink">Twitter</a>
                     </div>
                     <div class="col-3 content-BoxGCU d-flex justify-content-center">
                         <a href="https://github.com/RodrigoAVargasHdz/ofdft_normalizing-flows" class="customlink">GitHub</a>
