--- a/People.html
+++ b/People.html
@@ -70,7 +70,7 @@
                 <img src="./Media/profile_anim.gif" class="img-fluid" alt="">
             </div>
         </div>
-        
+
 
     </section>
 
@@ -82,16 +82,15 @@
             </div>
         </div>
 
-                <!-- PAPER 3 -->
-        <div class="row align-items-center mb-5 content-BoxGCU undergradStyle">
-            <div class="col-md-7">
+
+
+        <!-- GRAD STUDENT 1 -->
+        <div class="row align-items-center mb-5 content-BoxGCU gradStudentStyle">
+            <div class="col-md-8 person-description">
                 <div class="row">
-                    <h3 class="customh1"> Nombre del Alumno
-                    </h3>
-                    <hr>
-                </div>
-                <div class="row">
+                    <h2 class="customh1">Nombre alumno</h2>
                     Info del alumno
+                    <hr>
                 </div>
                 <div class="row">
                     <div class="col-6"></div>
@@ -99,22 +98,11 @@
                         <a href="https://arxiv.org/abs/2404.08764" class="customlink">Twitter</a>
                     </div>
                     <div class="col-3 content-BoxGCU d-flex justify-content-center">
-                        <a href="https://github.com/RodrigoAVargasHdz/ofdft_normalizing-flows" class="customlink">GitHub</a>
+                        <a href="https://github.com/RodrigoAVargasHdz/ofdft_normalizing-flows"
+                            class="customlink">GitHub</a>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-5  text-end">
-                <img src="./Media/Papers_Thumbnails/nflow_water.gif" class="img-fluid" alt="">
-            </div>
-        </div>
 
-
-        <!-- GRAD STUDENT 1 -->
-        <div class="row align-items-center mb-5 content-BoxGCU gradStudentStyle">
-            <div class="col-md-8 person-description">
-                <h2 class="customh1">Dr. Rodrigo A. Vargaz-Hernández (MEXICO)</h2>
-                Info del alumno
-                <hr>
             </div>
             <div class="col-md-4">
                 <img src="./Media/profile_anim.gif" class="img-fluid" alt="">
@@ -161,8 +149,8 @@
 
     </section>
 
-     <!-- MAIN SECTION: ALUMNI  -->
-     <section class="container mb-3 content-BoxGCU" style="background: rgb(67, 81, 86);">
+    <!-- MAIN SECTION: ALUMNI  -->
+    <section class="container mb-3 content-BoxGCU" style="background: rgb(67, 81, 86);">
         <div class="row align-items-center">
             <div class="col p-4" style="text-align: center;">
                 <h1 class="customh1 content-BoxGCU">Alumni</h1>
@@ -173,7 +161,7 @@
             <div class="col-md-8 person-description">
                 (2023) Simon Paiva, Visiting M.Sc Student <br>
                 (2023) Manuel Drewhal, Visiting Student <br>
-                (2024) Michael Tran, Undergraduate Thesis  <br>
+                (2024) Michael Tran, Undergraduate Thesis <br>
                 <hr>
             </div>
             <!-- <div class="col-md-4">
