--- a/People.html
+++ b/People.html
@@ -45,7 +45,7 @@
 
             <div class="col-md-3 content-BoxGCU">
                 <div class="p-3 rounded shadow" style="background: #5b6871;">
-                    <h2>OUR RESEARCH TEAM </h2>
+                    <h2 class="customh1">OUR RESEARCH TEAM </h2>
                     <hr>
                 </div>
             </div>
@@ -54,24 +54,37 @@
 
     <!-- ############### Detailed People text sections ############## -->
     <!-- MAIN SECTION: LAB PROFFESSOR AND STAFF -->
-    <section class="container mb-3 content-BoxGCU" style="background: #303639;">
+    <section class="container mb-3 content-BoxGCU" style="background: #485155;">
         <div class="row align-items-center">
             <div class="col p-4" style="text-align: center;">
-                <h1 class="customh1 content-BoxGCU">Staff</h1>
+                <h1 class="customh1 content-BoxGCU">STAFF</h1>
             </div>
         </div>
-        <!-- STAFF 1 -->
+
+        <!-- GRAD STUDENT 1 -->
         <div class="row align-items-center mb-5 content-BoxGCU gradStudentStyle">
             <div class="col-md-8 person-description">
-                <h2>Dr. Rodrigo A. Vargaz-Hernández (MEXICO)</h2>
-                <hr>
+                <div class="row">
+                    <h2 class="customh1">Nombre alumno</h2>
+                    Info del alumno
+                    <hr>
+                </div>
+                <div class="row">
+                    <div class="col-6"></div>
+                    <div class="col-3 content-BoxGCU d-flex justify-content-center">
+                        <a href="https://arxiv.org/abs/2404.08764" class="customlink">Twitter</a>
+                    </div>
+                    <div class="col-3 content-BoxGCU d-flex justify-content-center">
+                        <a href="https://github.com/RodrigoAVargasHdz/ofdft_normalizing-flows"
+                            class="customlink">GitHub</a>
+                    </div>
+                </div>
+
             </div>
             <div class="col-md-4">
                 <img src="./Media/profile_anim.gif" class="img-fluid" alt="">
             </div>
         </div>
-
-
     </section>
 
     <!-- MAIN SECTION: GRAD STUDENTS -->
@@ -111,14 +124,27 @@
         <!-- GRAD STUDENT 2 -->
         <div class="row align-items-center mb-5 content-BoxGCU gradStudentStyle">
             <div class="col-md-8 person-description">
-                <h2>Dr. Rodrigo A. Vargaz-Hernández (MEXICO)</h2>
-                <hr>
+                <div class="row">
+                    <h2 class="customh1">Nombre alumno</h2>
+                    Info del alumno
+                    <hr>
+                </div>
+                <div class="row">
+                    <div class="col-6"></div>
+                    <div class="col-3 content-BoxGCU d-flex justify-content-center">
+                        <a href="https://arxiv.org/abs/2404.08764" class="customlink">Twitter</a>
+                    </div>
+                    <div class="col-3 content-BoxGCU d-flex justify-content-center">
+                        <a href="https://github.com/RodrigoAVargasHdz/ofdft_normalizing-flows"
+                            class="customlink">GitHub</a>
+                    </div>
+                </div>
+
             </div>
             <div class="col-md-4">
                 <img src="./Media/profile_anim.gif" class="img-fluid" alt="">
             </div>
         </div>
-
     </section>
 
     <!-- MAIN SECTION: UNDERGRAD STUDENTS -->
@@ -159,26 +185,12 @@
         <!-- STUDENT 1 -->
         <div class="row align-items-center mb-5 content-BoxGCU undergradStyle ">
             <div class="col-md-8 person-description">
-                (2023) Simon Paiva, Visiting M.Sc Student <br>
-                (2023) Manuel Drewhal, Visiting Student <br>
                 (2024) Michael Tran, Undergraduate Thesis <br>
+                (2023) Manuel Drewhal, Visiting Student <br>
+                (2023) Simon Paiva, Visiting M.Sc Student <br>  
                 <hr>
             </div>
-            <!-- <div class="col-md-4">
-                <img src="./Media/profile_anim.gif" class="img-fluid" alt="">
-            </div> -->
         </div>
-        <!-- STUDENT 2 -->
-        <!-- <div class="row align-items-center mb-5 content-BoxGCU undergradStyle">
-            <div class="col-md-8 person-description">
-                <h2>Dr. Rodrigo A. Vargaz-Hernández (MEXICO)</h2>
-                <hr>
-            </div>
-            <div class="col-md-4">
-                <img src="./Media/profile_anim.gif" class="img-fluid" alt="">
-            </div>
-        </div> -->
-
     </section>
 
     <!-- ############### FOOTER ############## -->
